--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<progress value="0" max="100" id="uploader">0%</progress>
-<input type="file" id="filebutton" value="upload" onclick="filebuttoni()">
+<input type="file" id="filebutton" value="upload" #filebtn (change)="filebuttoni($event)">
+<img [src]="imageuploaded">
+<button (click)="chk()" >chk</button>
